fixed background flicker issue

--- a/src/Components/Layout/Layout.module.css
+++ b/src/Components/Layout/Layout.module.css
@@ -1,7 +1,8 @@
 .background {
+  position: absolute;
   background: fixed;
   /* background-image: url("../../images/mist.jpg"); */
-  /* background-position: top; */
+  background-position: top;
   background-size: cover;
 
   width: 100%;
